--- a/DOM/this.html
+++ b/DOM/this.html
@@ -14,6 +14,7 @@
 <div class="caja">2</div>
 <div class="caja">3</div>
 <div class="caja">4</div>
+<div class="caja">5</div>
 </body>
 
 <script type="text/javascript" src="js/this.js"></script>
